src/yini_test/cases/golden/strict/valid/comments/block-comments.strict.yini
@yini strict

/*
 * Block comment before the section.
 */
^ Application
name = "strict-block-comments"
/*
 * Block comment between members.
 */
enabled = true

/END
