src/yini_test/cases/golden/strict/invalid/duplicate-handling/duplicate-key.strict.yini
@yini strict

^ Application
name = "first-name"
name = "second-name"

/END
